--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>mogo-h5plus</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="html5plus://ready"></script>
+
+  <!-- 如果有使用mui,就不要注释下面两个标签 -->
+  <!-- <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.muiSourcePath %>assets/css/mui.min.css"> -->
+  <!-- <script src="<%= htmlWebpackPlugin.options.muiSourcePath %>assets/js/mui.min.js"></script> -->
+
+  <title>Mogo H5plus</title>
+</head>
+
+<body>
+  <div id="app"></div>
+
+  <script>
+    plus.key.addEventListener(
+      "backbutton",
+      function () {
+        var ws = plus.webview.currentWebview();
+        plus.webview.close(ws);
+      },
+      false
+    );
+    // plus.nativeUI.toast('嘿嘿');
+  </script>
+</body>
+
+
 </html>
