vant基本可用,打包测试通过

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="html5plus://ready"></script>
 
   <!-- 如果有使用mui,就不要注释下面两个标签 -->
-  <!-- <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.muiSourcePath %>assets/css/mui.min.css"> -->
-  <!-- <script src="<%= htmlWebpackPlugin.options.muiSourcePath %>assets/js/mui.min.js"></script> -->
+  <!-- <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.muiSourcePath %>./src/assets/mui/mui.min.css"> -->
+  <!-- <script src="<%= htmlWebpackPlugin.options.muiSourcePath %>./src/assets/mui/mui.min.js"></script> -->
 
   <title>Mogo H5plus</title>
 </head>
@@ -29,6 +29,5 @@
     // plus.nativeUI.toast('嘿嘿');
   </script>
 </body>
-
 
 </html>
