--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="html5plus://ready"></script>
 
-  <!-- 如果有使用mui,就不要注释下面的标签  -->
-  <script><%= htmlWebpackPlugin.options.muiScriptString %></script>
+  <%= htmlWebpackPlugin.options.plusReady %>
+    <!-- 如果有使用mui,就不要注释下面的标签  -->
+    <script><%= htmlWebpackPlugin.options.muiScriptString %></script>
 
 
-  <title>Mogo H5plus</title>
+    <title>Mogo H5plus</title>
 </head>
 
 <body>
   <div id="app"></div>
   <script>
-    plus.key.addEventListener(
-      "backbutton",
-      function () {
-        var ws = plus.webview.currentWebview();
-        plus.webview.close(ws);
-      },
-      false
-    );
+      plus.key.addEventListener(
+        "backbutton",
+        function () {
+          var ws = plus.webview.currentWebview();
+          plus.webview.close(ws);
+        },
+        false
+      );
     // plus.nativeUI.toast('嘿嘿');
   </script>
 </body>
